--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "app_id": "com.moodle.moodlemobile",
-    "appname": "Moodle Mobile",
-    "desktopappname": "Moodle Desktop",
+    "app_id": "com.eilmin.mobile",
+    "appname": "Eilmin Mobile",
+    "desktopappname": "Eilmin Desktop",
     "versioncode": 3700,
     "versionname": "3.7.0",
     "cache_update_frequency_usually": 420000,
@@ -75,12 +75,12 @@
     "skipssoconfirmation": false,
     "forcedefaultlanguage": false,
     "privacypolicy": "https:\/\/moodle.org\/mod\/page\/view.php?id=8148",
-    "notificoncolor": "#f98012",
+    "notificoncolor": "#00E6FF",
     "statusbarbg": false,
     "statusbarlighttext": false,
-    "statusbarbgios": "#f98012",
+    "statusbarbgios": "00E6FF",
     "statusbarlighttextios": true,
-    "statusbarbgandroid": "#df7310",
+    "statusbarbgandroid": "00E6FF",
     "statusbarlighttextandroid": true,
     "statusbarbgremotetheme": "#000000",
     "statusbarlighttextremotetheme": true,
